rubocop/examples/bad/Style_Alias.rb
# 'https://github.com/bbatsov/ruby-style-guide#alias-method'

# TODO: Always use alias_method when aliasing methods of modules, classes,
#   or singleton classes at runtime as the lexical scope of alias leads
#   to unpredictability in these cases.
